# developer-bootcamp-2024

./: .gitignore
alchemy-demo/: demo-script.js  package.json
project-11-programmable-money/frontend/: package.json
project-13-getting-to-production/anchor/: package.json
project-2-voting/anchor/: package.json
project-3-blinks/anchor/: package.json
project-4-crud-app/anchor/: package.json
project-6-nfts/: package.json
rust-learn-examples/: Cargo.toml  LEARNING_PLAN.md  rust.md
rust-learn-examples/must_master/: 01_variables_and_mutability.rs  02_data_types.rs  03_functions_and_scope.rs  04_flow_control.rs  05_ownership_and_borrowing.rs  06_references_and_slices.rs  07_structs_and_methods.rs  08_enums_and_pattern_matching.rs  11_error_handling.rs  14_lifetimes.rs  15_std_lib_and_macros.rs  16_anchor_core_concepts.rs
rust-learn-examples/occasionally_used/: 09_collections.rs  10_modules_and_packages.rs  12_generics.rs  13_traits_and_trait_bounds.rs
solana_todo_list/: Anchor.toml  Test.md  anchor.md  anchor_framework.md
solana_todo_list/programs/solana_todo_list/: Cargo.toml
solana_todo_list/programs/solana_todo_list/src/: anchor_account_macros_demo.rs  lib.rs
solana_todo_list/tests/: solana_todo_list.ts
